media: Update warning message on empty robustness string

As discussed offline, removing the "potentially including failure to
play" part to avoid confusion. We should write and publish a doc
explaining the details around this and provide the link to the doc
in the warning message, which is covered by a TODO.

BUG=720013
TEST=String change only. No tests required.

Change-Id: Ia99654405fe8a7c32e19b44678fcc8508e6dc60c
Reviewed-on: https://chromium-review.googlesource.com/648429
Reviewed-by: David Dorwin <ddorwin@chromium.org>
Commit-Queue: Xiaohan Wang <xhwang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#499341}
Former-commit-id: f44ad44a93ee4079f1fa110d15d686c5cd51c1eb